syntax = "proto3";

option csharp_namespace = "BlazorGrpc.gRPC";

package Product;

service ProductService {
    rpc GetProduct (GetProductRequest) returns (ProductResponse);
    rpc CreateProduct (CreateProductRequest) returns (ProductResponse);
    rpc UpdateProduct (UpdateProductRequest) returns (ProductResponse);
    rpc DeleteProduct (DeleteProductRequest) returns (Empty);
    rpc ListProducts (Empty) returns (ProductListResponse);
}

message GetProductRequest {
    int32 id = 1;
}

message CreateProductRequest {
    string name = 1;
    float price = 2;
}

message UpdateProductRequest {
    int32 id = 1;
    string name = 2;
    float price = 3;
}

message DeleteProductRequest {
    int32 id = 1;
}

message ProductResponse {
    int32 id = 1;
    string name = 2;
    float price = 3;
}

message ProductListResponse {
    repeated ProductResponse products = 1;
}

message Empty {}
